--- a/styles/index.css
+++ b/styles/index.css
@@ -48,6 +48,10 @@ nav li a{
     text-decoration: none;
     font-size: 20px;
 }
+.secondar-bg{
+    background-color: #FFF8F3;
+
+}
 .dark-2{
     color: #474747;
 }
@@ -70,4 +74,33 @@ nav li a{
     justify-content: space-between;
     margin: 0 35px 0 200px;
 }
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+.main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* About styles */
+.about{
+    border-radius: 10px;
+    padding: 130px  150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.item-description{
+    font-weight: 600;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+
+}
+
     
